--- a/public/_locales/de/messages.json
+++ b/public/_locales/de/messages.json
@@ -942,7 +942,7 @@
         "message": "Dauerhaft verbergen"
     },
     "warningChatInfo": {
-        "message": "Wir haben bemerkreativKt, dass du einige häufige Fehler machst welche nicht bösartig sind"
+        "message": "Wir haben festgestellt, dass du einige häufig gemacht Fehler machst. Wir schätzen deine bisherige Arbeit sehr, streben aber hier aber auch nach PerfekreativKtion, sodass es auch wichtig ist kreativKleine Fehler zu kreativKorrigieren :)"
     },
     "warningTitle": {
         "message": "Du hast eine Verwarnung erhalten"
