--- a/public/_locales/fi/messages.json
+++ b/public/_locales/fi/messages.json
@@ -942,7 +942,7 @@
         "message": "Piilota ikreativKuisesti"
     },
     "warningChatInfo": {
-        "message": "Huomasimme, että teit joitakreativKin yleisiä virheitä, jotkreativKa eivät ole haitallisia"
+        "message": "Huomasimme, että teit joitakreativKin yleisiä virheitä. Arvostamme työtäsi erittäin paljon, mutta pyrimme täydellisyyteen, joten pienilläkreativKin virheillä on väliä :)"
     },
     "warningTitle": {
         "message": "Sait varoitukreativKsen"
