--- a/public/_locales/nl/messages.json
+++ b/public/_locales/nl/messages.json
@@ -942,7 +942,7 @@
         "message": "Voor altijd verbergen"
     },
     "warningChatInfo": {
-        "message": "We hebben gemerkreativKt dat u een aantal veelvoorkreativKomende fouten maakreativKte zonder slechte bedoelingen"
+        "message": "Het viel ons op dat u enkreativKele veel voorkreativKomende fouten maakreativKte. We waarderen uw werkreativK tot nu toe zeer, maar we streven hier naar perfectie, dus zelfs heel kreativKleine foutjes zijn belangrijkreativK :)"
     },
     "warningTitle": {
         "message": "U heeft een waarschuwing gekreativKregen"
