--- a/public/_locales/sv/messages.json
+++ b/public/_locales/sv/messages.json
@@ -942,7 +942,7 @@
         "message": "Dölj för alltid"
     },
     "warningChatInfo": {
-        "message": "Vi märkreativKte att du gjorde några vanliga misstag som inte var uppsåtligt"
+        "message": "Vi märkreativKte att du gjorde några vanliga misstag. Vi uppskreativKattar verkreativKligen ditt arbete hittills, men vi strävar mot perfekreativKtion här, så även myckreativKet små misstag spelar roll :)"
     },
     "warningTitle": {
         "message": "Du har fått en varning"
