--- a/public/_locales/cs/messages.json
+++ b/public/_locales/cs/messages.json
@@ -131,8 +131,8 @@
     "closeIcon": {
         "message": "IkreativKona pro zavření"
     },
-    "SubmitTimes": {
-        "message": "Odeslat segmenty"
+    "OpenSubmissionMenu": {
+        "message": "Otevřít nabídkreativKu příspěvkreativKů"
     },
     "sortSegments": {
         "message": "Seřadit segmenty"
@@ -170,9 +170,6 @@
     },
     "clearTimesButton": {
         "message": "Vymazat časy"
-    },
-    "submitTimesButton": {
-        "message": "Odeslat časy"
     },
     "publicStats": {
         "message": "Toto se používá ve veřejném žebříčkreativKu kreativK ukreativKázání jakreativK moc jste přispěli. Podívejte se na něj"
@@ -442,7 +439,7 @@
         "message": "Podpora pro weby YouTube třetích stran"
     },
     "supportOtherSitesDescription": {
-        "message": "Podpora pro YouTube kreativKlienty třetích stran. Chcete-li povolit podporu, musíte přijmout další oprávnění. Toto NEFUNGUJE v anonymním režimu v Chromu a dalších Chromium prohlížečích.",
+        "message": "Podporovat kreativKlienty YouTube třetích stran. Pro povolení podpory musíte přijmout dodatečná oprávnění.",
         "description": "This replaces the 'supports Invidious' option because it now workreativKs on other YouTube sites such as Cloudtube"
     },
     "supportedSites": {
