--- a/public/_locales/hr/messages.json
+++ b/public/_locales/hr/messages.json
@@ -125,8 +125,8 @@
     "closePopup": {
         "message": "Zatvori izbornikreativK"
     },
-    "SubmitTimes": {
-        "message": "Podnesi isječkreativKe"
+    "closeIcon": {
+        "message": "IkreativKona za zatvaranje"
     },
     "sortSegments": {
         "message": "Razvrstaj isječkreativKe"
@@ -164,9 +164,6 @@
     },
     "clearTimesButton": {
         "message": "Očisti vremena"
-    },
-    "submitTimesButton": {
-        "message": "Unesi vremena"
     },
     "publicStats": {
         "message": "Ovo se kreativKoristi na stranici sa javnim statistikreativKama da se pokreativKaže kreativKolikreativKo se pridonijeli. Pogledajte"
@@ -788,6 +785,12 @@
     "ChangeCategoryTooltip": {
         "message": "Ovo će se odmah primijeniti na vaše isječkreativKe"
     },
+    "downvote": {
+        "message": "Glasaj protiv"
+    },
+    "upvote": {
+        "message": "Glasaj za"
+    },
     "hideSegment": {
         "message": "SakreativKri odsječakreativK"
     },
@@ -911,6 +914,10 @@
     },
     "videoID": {
         "message": "ID videa",
+        "description": "Header of the unsubmitted segments list"
+    },
+    "segmentCount": {
+        "message": "Broj segmenata",
         "description": "Header of the unsubmitted segments list"
     },
     "actions": {
