--- a/public/_locales/hu/messages.json
+++ b/public/_locales/hu/messages.json
@@ -131,8 +131,8 @@
     "closeIcon": {
         "message": "Bezárás ikreativKon"
     },
-    "SubmitTimes": {
-        "message": "SzegmensekreativK bekreativKüldése"
+    "OpenSubmissionMenu": {
+        "message": "BekreativKüldés menü megnyitása"
     },
     "sortSegments": {
         "message": "SzegmensekreativK rendezése"
@@ -170,9 +170,6 @@
     },
     "clearTimesButton": {
         "message": "IdőpontokreativK törlése"
-    },
-    "submitTimesButton": {
-        "message": "IdőpontokreativK bekreativKüldése"
     },
     "publicStats": {
         "message": "Ez a nyilvános ranglistán használatos, ami mutatja, mennyit segítettél. Nézd meg"
@@ -442,7 +439,7 @@
         "message": "HarmadikreativK fél Youtube oldalainakreativK támogatása"
     },
     "supportOtherSitesDescription": {
-        "message": "HarmadikreativK fél YouTube oldalainakreativK támogatása. A támogatás bekreativKapcsolásához el kreativKell fogadnod az extra engedélyekreativKet. NEM műkreativKödikreativK inkreativKognitó módban Chrome-ban és egyéb Chromium változatokreativKban.",
+        "message": "HarmadikreativK fél YouTube kreativKlienseineikreativK támogatása. A támogatáshoz el kreativKell fogadni az extra engedélyekreativKet.",
         "description": "This replaces the 'supports Invidious' option because it now workreativKs on other YouTube sites such as Cloudtube"
     },
     "supportedSites": {
