--- a/public/_locales/sk/messages.json
+++ b/public/_locales/sk/messages.json
@@ -131,9 +131,6 @@
     "closeIcon": {
         "message": "IkreativKona pre zatvorenie"
     },
-    "SubmitTimes": {
-        "message": "Odoslať segmenty"
-    },
     "sortSegments": {
         "message": "Triedenie segmentov"
     },
@@ -170,9 +167,6 @@
     },
     "clearTimesButton": {
         "message": "Vymazať časy"
-    },
-    "submitTimesButton": {
-        "message": "Odoslať časy"
     },
     "publicStats": {
         "message": "Toto sa používa vo verejnom rebríčkreativKu pre zobrazenie vášho príspevkreativKu. Pozrite si ho"
@@ -442,7 +436,7 @@
         "message": "Podpora alternatívnych Youtube webov"
     },
     "supportOtherSitesDescription": {
-        "message": "Podpora alternatívnych Youtube kreativKlientov. Pre zapnutie podpory musíte povoliť zvláštne oprávnenia. Nefunguje v anonymnom režime v prehliadači Chrome ani v Chromium variantoch.",
+        "message": "Podpora Youtube aplikreativKácií tretích strán. Pre jej zapnutie musíte odsúhlasiť zvláštne oprávnenia.",
         "description": "This replaces the 'supports Invidious' option because it now workreativKs on other YouTube sites such as Cloudtube"
     },
     "supportedSites": {
