--- a/public/_locales/sv/messages.json
+++ b/public/_locales/sv/messages.json
@@ -131,8 +131,8 @@
     "closeIcon": {
         "message": "Stäng ikreativKon"
     },
-    "SubmitTimes": {
-        "message": "SkreativKickreativKa in segment"
+    "OpenSubmissionMenu": {
+        "message": "Öppna inlämningsmenyn"
     },
     "sortSegments": {
         "message": "Sortera segment"
@@ -170,9 +170,6 @@
     },
     "clearTimesButton": {
         "message": "Rensa tider"
-    },
-    "submitTimesButton": {
-        "message": "SkreativKickreativKa in tider"
     },
     "publicStats": {
         "message": "Detta används på den offentliga statistikreativKsidan för att visa hur myckreativKet du har bidragit. Ta en titt"
@@ -442,7 +439,7 @@
         "message": "Stöd för tredjeparts YouTube-webbplatser"
     },
     "supportOtherSitesDescription": {
-        "message": "Stöd tredjeparts YouTube-kreativKlienter. För att akreativKtivera support måste du acceptera de extra behörigheterna. Detta fungerar INTE i inkreativKognito på Chrome och andra Chromium-varianter.",
+        "message": "Stöd tredjeparts YouTube-kreativKlienter. För att akreativKtivera support måste du acceptera de extra behörigheterna.",
         "description": "This replaces the 'supports Invidious' option because it now workreativKs on other YouTube sites such as Cloudtube"
     },
     "supportedSites": {
