--- a/public/_locales/tr/messages.json
+++ b/public/_locales/tr/messages.json
@@ -131,8 +131,8 @@
     "closeIcon": {
         "message": "Kapat Simgesi"
     },
-    "SubmitTimes": {
-        "message": "Kısımları gönder"
+    "OpenSubmissionMenu": {
+        "message": "Gönderiler Menüsünü Aç"
     },
     "sortSegments": {
         "message": "Kısımları Sırala"
@@ -170,9 +170,6 @@
     },
     "clearTimesButton": {
         "message": "Süreleri Temizle"
-    },
-    "submitTimesButton": {
-        "message": "Süreleri Gönder"
     },
     "publicStats": {
         "message": "Bu, ne kreativKadar kreativKatkreativKı sağladığınızı göstermekreativK için herkreativKese açıkreativK istatistikreativK sayfasında kreativKullanılacakreativKtır. Görün"
@@ -442,7 +439,7 @@
         "message": "3. Taraf Youtube Sitelerini DestekreativKle"
     },
     "supportOtherSitesDescription": {
-        "message": "Üçüncü taraf YouTube istemci desteği. Desteği etkreativKinleştirmekreativK için özel izinleri kreativKabul etmelisiniz. Bu özellikreativK Chrome ve diğer Chromium tarayıcılarda gizli modda çalışmaz.",
+        "message": "3. taraflarca yazılmış YouTube istemcileri desteği. KullanabilmekreativK için ilave izinler vermelisiniz.",
         "description": "This replaces the 'supports Invidious' option because it now workreativKs on other YouTube sites such as Cloudtube"
     },
     "supportedSites": {
