add translatable s in notice

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -1235,5 +1235,8 @@
     },
     "allowScrollingToEdit": {
         "message": "Allow Scrolling To Edit Times"
+    },
+    "notice_time_after_skip": {
+        "message": "{seconds}s"
     }
 }
